feat: implement roles CRUD, restore account and forgot password functionality
