# src/Routes/user.routes.js
@@ -1,6 +1,8 @@
 const express = require('express');
 const router = express.Router();
-const {signUp, resendVerifyCode, verifyCode, signIn, resend2FACode, verify2FACode} = require('../controllers/user.controller');
+const {signUp, resendVerifyCode, verifyCode, signIn, resend2FACode, verify2FACode,
+    sendresetPassword, sendforgotPassword, resetpassword, forgotpassword
+} = require('../controllers/user.controller');
 
 router.post('/SignUp', signUp);
 router.post('/ResendVerifyCode', resendVerifyCode);
@@ -8,5 +10,9 @@ router.post('/VerifyCode', verifyCode);
 router.post('/SignIn', signIn);
 router.post('/Resend2FACode', resend2FACode);
 router.post('/Verify2FACode', verify2FACode);
+router.post('/SendResetPassword', sendresetPassword);
+router.post('/SendForgotPassword', sendforgotPassword);
+router.post('/ResetPassword', resetpassword);
+router.post('/ForgotPassword', forgotpassword);
 
 module.exports = router;
